test/Fail/Issue3340.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  f x = _47 : _f.P_46 x (blocked on _47)
  _f.P_46 y =< _f.P_46 x (blocked on _f.P_46)

Issue3340.agda:12.16-13.17: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue3340.agda:12.16-17
  Issue3340.agda:12.22-25
  Issue3340.agda:13.13-17
